--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -11,9 +11,9 @@ services:
     command: /bin/bash -c "cd app/ui && trunk serve --port 8086 --address 0.0.0.0"
     environment:
       - API_PORT=${API_PORT:-8080}
-      - TRUNK_SERVE_PORT=8086
+      - TRUNK_SERVE_PORT=${TRUNK_SERVE_PORT:-8086}
     ports:
-      - "8086:8086"
+      - "${TRUNK_SERVE_PORT:-8086}:${TRUNK_SERVE_PORT:-8086}"
   actix-api:
     volumes:
       - type: bind
@@ -23,8 +23,9 @@ services:
       dockerfile: ../docker/Dockerfile.actix
     secrets:
       - mongodb_key
-    command: /bin/bash -c "export TMPDIR=/app/api/tmp && cd app/api && cargo watch -x run"
+    command: /bin/bash -c "cd app/api && cargo watch -x run"
     environment:
+      - TMPDIR=/app/api/tmp
       - API_PORT=${API_PORT:-8080}
       - TRUNK_SERVE_PORT=${TRUNK_SERVE_PORT:-8086}
       - TRUNK_SERVE_HOST=localhost
@@ -32,7 +33,7 @@ services:
       - MAX_TITLE_LEN=100
       - MAX_FILE_SIZE=3078000
     ports:
-      - "${API_PORT-8080}:${API_PORT:-8080}"
+      - "${API_PORT:-8080}:${API_PORT:-8080}"
 
 secrets:
   mongodb_key:
