--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
         target: /app 
     build:
       dockerfile: ../docker/Dockerfile.yew
-    command: /bin/bash -c "cd app/ui && trunk serve --port 8086 --address 0.0.0.0"
+    command: /bin/bash -c "cd app/ui && trunk serve --port ${TRUNK_SERVE_PORT:-8086} --address 0.0.0.0"
     environment:
       - API_PORT=${API_PORT:-8080}
       - TRUNK_SERVE_PORT=${TRUNK_SERVE_PORT:-8086}
