--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -18,6 +18,7 @@ actix-files = "0.6.2"
 futures = "0.3.25"
 indextree = "4.5.0"
 indexmap = "1.9.2"
+actix-cors = "0.6.4"
 
 [dependencies.mongodb]
 version = "2.3.1"
