--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -6,4 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+types = { path= "../types/" }
+reqwasm = "0.5.0"
+wasm-bindgen-futures = "0.4.34"
+web-sys = "0.3.61"
 yew = { version = "0.20.0", features = ["csr"] }
+getrandom = { version = "0.2", features = ["js"] }
+yew-router = "0.17.0"
