--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -11,6 +11,7 @@ services:
     command: /bin/bash -c "cd app/ui && trunk serve --port ${TRUNK_SERVE_PORT:-8086} --address 0.0.0.0"
     environment:
       - API_PORT=${API_PORT:-8080}
+      - API_HOST=${API_HOST:-localhost}
       - TRUNK_SERVE_PORT=${TRUNK_SERVE_PORT:-8086}
     ports:
       - "${TRUNK_SERVE_PORT:-8086}:${TRUNK_SERVE_PORT:-8086}"
@@ -28,7 +29,7 @@ services:
       - TMPDIR=/app/api/tmp
       - API_PORT=${API_PORT:-8080}
       - TRUNK_SERVE_PORT=${TRUNK_SERVE_PORT:-8086}
-      - TRUNK_SERVE_HOST=localhost
+      - TRUNK_SERVE_HOST=${TRUNK_SERVE_HOST:-localhost}
       - MAX_BODY_LEN=2000
       - MAX_TITLE_LEN=100
       - MAX_FILE_SIZE=3078000
