--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ui"
+name = "kouchan-ui"
 version = "0.1.0"
 edition = "2021"
 
@@ -13,3 +13,4 @@ web-sys = "0.3.61"
 yew = { version = "0.20.0", features = ["csr"] }
 getrandom = { version = "0.2", features = ["js"] }
 yew-router = "0.17.0"
+chrono = { version = "0.4.23", features = [ "wasmbind" ] }
