--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -14,3 +14,5 @@ yew = { version = "0.20.0", features = ["csr"] }
 getrandom = { version = "0.2", features = ["js"] }
 yew-router = "0.17.0"
 chrono = { version = "0.4.23", features = [ "wasmbind" ] }
+stdweb = "0.4.20"
+wasm-bindgen = "0.2.84"
