--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -24,18 +24,22 @@ services:
       dockerfile: ../docker/Dockerfile.actix
     secrets:
       - mongodb_key
+      - aws_secret_key
     command: /bin/bash -c "cd app/api && cargo watch -x run"
     environment:
       - TMPDIR=/app/api/tmp
       - API_PORT=${API_PORT:-8080}
       - TRUNK_SERVE_PORT=${TRUNK_SERVE_PORT:-8086}
       - TRUNK_SERVE_HOST=${TRUNK_SERVE_HOST:-localhost}
-      - MAX_BODY_LEN=2000
-      - MAX_TITLE_LEN=100
-      - MAX_FILE_SIZE=3078000
+      - AWS_ACCESS_KEY=AKIAZGK2J3QGWCLVJ4S5
+      - MAX_BODY_LEN=${MAX_BODY_LEN:-2000}
+      - MAX_TITLE_LEN=${MAX_TITLE_LEN:-100}
+      - MAX_FILE_SIZE=${MAX_FILE_SIZE:-3078000}
     ports:
       - "${API_PORT:-8080}:${API_PORT:-8080}"
 
 secrets:
   mongodb_key:
     file: ../api/.mongodb_key
+  aws_secret_key:
+    file: ../api/.aws_secret_key
