--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -16,3 +16,4 @@ yew-router = "0.17.0"
 chrono = { version = "0.4.23", features = [ "wasmbind" ] }
 stdweb = "0.4.20"
 wasm-bindgen = "0.2.84"
+yew-oauth2 = "0.5.0"
